<?xml version="1.0"?>
<package format="3">
  <name>abb_rapid_msgs</name>
  <version>0.5.3</version>
  <description>
    Provides ROS message definitions, representing RAPID data from ABB robot controllers.
  </description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>

  <export>
    <rosidl_default_generators/>
  </export>
</package>
