<?xml version="1.0"?>
<package format="3">
  <name>abb_rapid_sm_addin_msgs</name>
  <version>0.5.3</version>
  <description>
    Provides ROS message and service definitions, representing interaction
    with ABB robot controllers using the RobotWare StateMachine Add-In.
  </description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>
<member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>abb_rapid_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>

  <export>
    <rosidl_default_generators/>
  </export>
</package>
